Added gitHub link in the header section and added TCS experience.

--- a/welcome_page.html
+++ b/welcome_page.html
@@ -46,10 +46,11 @@
             <h1 class="text-3xl md:text-4xl lg:text-5xl font-bold text-gray-800 tracking-tight">Siddharth Srivastava</h1>
             <p class="text-lg md:text-xl text-gray-500 mt-2">Seasoned Software Developer</p>
             <div class="flex flex-col md:flex-row justify-center items-center space-y-2 md:space-y-0 md:space-x-6 mt-4 text-sm text-gray-600">
-                <p><strong>P:</strong> +91 9891006232</p>
-                <p><strong>E:</strong> Srivastavsiddharth3@gmail.com</p>
+                <p><strong>P:</strong> +91-9891006232</p>
+                <p><strong>E:</strong> srivastavsiddharth3@gmail.com</p>
                 <p><strong>Location:</strong> Delhi-NCR, India</p>
                 <a href="https://www.linkedin.com/in/siddharth-srivastava-b790b714b/" target="_blank" class="hover:underline text-blue-600 font-medium">LinkedIn</a>
+                <a href="https://github.com/sidd-97/careerBook" target="_blank" class="hover:underline text-blue-600 font-medium">GitHub</a>
             </div>
         </header>
 
@@ -66,19 +67,19 @@
         <!-- Experience Section -->
         <section class="mb-8">
             <h2 class="text-2xl font-bold section-heading pb-2 mb-4">Experience</h2>
-            <!-- IT Analyst -->
+            <!-- IT Analyst TCS-->
             <div class="mb-6">
                 <div class="flex flex-col md:flex-row justify-between items-start md:items-center">
                     <h3 class="text-xl font-semibold">IT Analyst, Tata Consultancy Services</h3>
                     <span class="text-gray-500 mt-1 md:mt-0">Sep 2024 - Present</span>
                 </div>
                 <ul class="list-disc pl-5 mt-2 space-y-2 text-gray-700">
-                    <li>Conducted review sessions with the support team to find recurring problems, increasing systems reliability by 25%.</li>
-                    <li>Resolved critical system bugs by conducting thorough root cause analysis, resulting in a 50% decrease in system downtime.</li>
-                    <li>Planned and coordinated with 2 cross-functional teams to enable 98% software and hardware effectiveness in a very tight timeframe.</li>
-                    <li>Implemented a robust issue logging process to track system performance, reducing code re-work efforts by 40%.</li>
+                    <li>Responsible for 4 application's end-to-end development and maintainance for any legacy code bug or new featur addition</li>
+                    <li>Targeted apllication wide vulnerabilities on the leagacy code, reduced upwards of 80% of the VUF's</li>
+                    <li>Planned and coordinated with 2 cross-functional teams to migrate the accounts transactions report to new infrastructure with 99% accuracy in a very tight timeframe.</li>
+                    <li>Migrated 2 struts based application to Spring MVC 6 for the very first time, with 98% accuracy</li>
                     <li>Responsible for the welfare and training of 5+ young recruits, ensuring team members were equipped to get the most out of their career.</li>
-                    <li>Brought down the cost of the support team by 40% by properly planning and designing upcoming systems.</li>
+                    <li>Documented all the steps followed during any major activity in the team.</li>
                 </ul>
             </div>
             <!-- IT Manager -->
