Added S3 bucket link for resume

--- a/revampedWelcomPage.html
+++ b/revampedWelcomPage.html
@@ -196,7 +196,7 @@
         <!-- Download Button -->
         <div class="text-center mt-8">
             <!-- IMPORTANT: Replace the href with the actual URL of your resume PDF file hosted on AWS S3 -->
-            <a href="https://your-s3-bucket-name.s3.amazonaws.com/your-resume-file.pdf" target="_blank"
+            <a href="https://initial-learning-page.s3.ap-south-1.amazonaws.com/Siddharth_Srivastava(v4.1).pdf" target="_blank"
                class="inline-block bg-blue-600 text-white font-bold py-3 px-8 rounded-full shadow-lg hover:bg-blue-700 transition duration-300 transform hover:scale-105 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2">
                 Download Resume (PDF)
             </a>
