--- a/revampedWelcomPage.html
+++ b/revampedWelcomPage.html
@@ -203,18 +203,18 @@
             <p class="text-gray-700 leading-relaxed mb-4">
                 If you have a business inquiry or would like to connect, please feel free to reach out using the form below.
             </p>
-            <form action="#" method="POST" class="space-y-4">
+            <form action="https://docs.google.com/forms/d/e/1FAIpQLSehqCr1SUMwlA61sPjlu_DP14GmqbqLX8hTrSFX_TujXPPHvA/formResponse" method="POST" target="_blank" class="space-y-4">
                 <div>
                     <label for="name" class="block text-sm font-medium text-gray-700">Name</label>
-                    <input type="text" id="name" name="name" class="form-input mt-1 block w-full rounded-md shadow-sm focus:border-blue-500 focus:ring-blue-500 sm:text-sm" required>
+                    <input type="text" id="name" name="entry.797325488" class="form-input mt-1 block w-full rounded-md shadow-sm focus:border-blue-500 focus:ring-blue-500 sm:text-sm" required>
                 </div>
                 <div>
                     <label for="email" class="block text-sm font-medium text-gray-700">Email</label>
-                    <input type="email" id="email" name="email" class="form-input mt-1 block w-full rounded-md shadow-sm focus:border-blue-500 focus:ring-blue-500 sm:text-sm" required>
+                    <input type="email" id="email" name="entry.2015257675" class="form-input mt-1 block w-full rounded-md shadow-sm focus:border-blue-500 focus:ring-blue-500 sm:text-sm" required>
                 </div>
                 <div>
                     <label for="message" class="block text-sm font-medium text-gray-700">Message</label>
-                    <textarea id="message" name="message" rows="4" class="form-input mt-1 block w-full rounded-md shadow-sm focus:border-blue-500 focus:ring-blue-500 sm:text-sm" required></textarea>
+                    <textarea id="message" name="entry.189994758" rows="4" class="form-input mt-1 block w-full rounded-md shadow-sm focus:border-blue-500 focus:ring-blue-500 sm:text-sm" required></textarea>
                 </div>
                 <div class="text-center mt-8">
                     <button type="submit" class="inline-block bg-blue-600 text-white font-bold py-3 px-8 rounded-full shadow-lg hover:bg-blue-700 transition duration-300 transform hover:scale-105 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2">Send Message</button>
@@ -224,8 +224,7 @@
 
         <!-- Download Button -->
         <div class="text-center mt-8">
-            <!-- IMPORTANT: Replace the href with the actual URL of your resume PDF file hosted on AWS S3 -->
-            <a href="https://your-s3-bucket-name.s3.amazonaws.com/your-resume-file.pdf" target="_blank"
+            <a href="https://initial-learning-page.s3.ap-south-1.amazonaws.com/Siddharth_Srivastava(v4.1).pdf" target="_blank"
                class="inline-block bg-blue-600 text-white font-bold py-3 px-8 rounded-full shadow-lg hover:bg-blue-700 transition duration-300 transform hover:scale-105 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2">
                 Download Resume (PDF)
             </a>
