--- a/revampedWelcomPage.html
+++ b/revampedWelcomPage.html
@@ -49,6 +49,52 @@
             border: 1px solid #9ca3af; /* Darker border color */
             padding: 0.5rem;
         }
+        
+        /* CSS for the loading overlay and spinner */
+        #loading-overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(255, 255, 255, 0.9);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            z-index: 1000;
+            backdrop-filter: blur(5px);
+            -webkit-backdrop-filter: blur(5px);
+            transition: opacity 0.3s ease-in-out;
+            opacity: 0;
+            pointer-events: none;
+        }
+        #loading-overlay.active {
+            opacity: 1;
+            pointer-events: auto;
+        }
+        .spinner {
+            border: 8px solid #f3f3f3;
+            border-top: 8px solid #3b82f6;
+            border-radius: 50%;
+            width: 60px;
+            height: 60px;
+            animation: spin 1.5s linear infinite;
+        }
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
+        .success-tick {
+            display: none;
+            color: #10b981;
+            font-size: 2rem;
+            animation: popIn 0.5s ease-out forwards;
+        }
+        @keyframes popIn {
+            0% { transform: scale(0); opacity: 0; }
+            80% { transform: scale(1.2); opacity: 1; }
+            100% { transform: scale(1); }
+        }
     </style>
 </head>
 <body class="p-4 md:p-8 bg-[#EDEDED]">
@@ -203,7 +249,9 @@
             <p class="text-gray-700 leading-relaxed mb-4">
                 If you have a business inquiry or would like to connect, please feel free to reach out using the form below.
             </p>
-            <form action="https://docs.google.com/forms/d/e/1FAIpQLSehqCr1SUMwlA61sPjlu_DP14GmqbqLX8hTrSFX_TujXPPHvA/formResponse" method="POST" target="_blank" class="space-y-4">
+            <!-- <form action="https://docs.google.com/forms/d/e/1FAIpQLSehqCr1SUMwlA61sPjlu_DP14GmqbqLX8hTrSFX_TujXPPHvA/formResponse" method="POST" target="_blank" class="space-y-4"> -->
+            <!-- This form will send out the data to JS to populate the entered data and do an async call and wait for a response to show the confirmation on the UI -->
+            <form id="contact-form" class="space-y-4">
                 <div>
                     <label for="name" class="block text-sm font-medium text-gray-700">Name</label>
                     <input type="text" id="name" name="entry.797325488" class="form-input mt-1 block w-full rounded-md shadow-sm focus:border-blue-500 focus:ring-blue-500 sm:text-sm" required>
@@ -232,6 +280,14 @@
 
     </div>
 
+    <!-- Loading Overlay -->
+    <div id="loading-overlay">
+        <div id="spinner" class="spinner"></div>
+        <svg id="success-tick" class="success-tick" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
+            <path d="M9.9997 16.1709L4.82996 11.0012L3.41406 12.415L9.9997 19.0007L21.2427 7.75781L19.8285 6.3435L9.9997 16.1709Z"/>
+        </svg>
+    </div>
+
     <script>
         function toggleSection(id) {
             const element = document.getElementById(id);
@@ -250,6 +306,51 @@
                 targetElement.scrollIntoView({
                     behavior: 'smooth'
                 });
+            }
+        });
+
+
+        const form = document.getElementById('contact-form');
+        const loadingOverlay = document.getElementById('loading-overlay');
+        const spinner = document.getElementById('spinner');
+        const successTick = document.getElementById('success-tick');
+
+        form.addEventListener('submit', async function(e) {
+            e.preventDefault();
+
+            // Show loading overlay
+            loadingOverlay.classList.add('active');
+            spinner.style.display = 'block';
+            successTick.style.display = 'none';
+
+            // Get form data and Google Forms URL
+            const formData = new FormData(form);
+            const formUrl = 'https://docs.google.com/forms/d/e/1FAIpQLSehqCr1SUMwlA61sPjlu_DP14GmqbqLX8hTrSFX_TujXPPHvA/formResponse';
+
+            try {
+                // Submit form data using fetch
+                const response = await fetch(formUrl, {
+                    method: 'POST',
+                    body: formData,
+                    mode: 'no-cors' // Use no-cors to prevent CORS issues
+                });
+
+                // Display success
+                spinner.style.display = 'none';
+                successTick.style.display = 'block';
+                
+                // Wait a moment before hiding the overlay and resetting the form
+                setTimeout(() => {
+                    loadingOverlay.classList.remove('active');
+                    form.reset(); // Reset the form fields
+                }, 2000);
+
+            } catch (error) {
+                console.error('Error submitting form:', error);
+                // Handle error state (e.g., show a red 'X' or an error message)
+                setTimeout(() => {
+                    loadingOverlay.classList.remove('active');
+                }, 2000);
             }
         });
     </script>
