--- a/RedesignWelcomePage.html
+++ b/RedesignWelcomePage.html
@@ -99,6 +99,35 @@
             80% { transform: scale(1.2); opacity: 1; }
             100% { transform: scale(1); }
         }
+
+        /* Print Specific Styles */
+        @media print {
+            nav, #contact-section, footer, .no-print {
+                display: none !important;
+            }
+            body {
+                background-color: white;
+                color: black;
+            }
+            .container {
+                max-width: 100%;
+                width: 100%;
+                padding: 0;
+            }
+            .card {
+                box-shadow: none;
+                border: none;
+                padding: 0;
+                margin-bottom: 1.5rem;
+            }
+            /* Force expand accordions for print */
+            .section-content {
+                display: block !important;
+            }
+            .arrow-icon {
+                display: none;
+            }
+        }
     </style>
 </head>
 <body>
@@ -201,19 +230,34 @@
                 </section>
 
                 <!-- Download Button Card -->
-                <section class="card bg-blue-50 border-2 border-blue-200 p-6 text-center">
-                    <h3 class="text-xl font-semibold mb-3 text-blue-700">Need a Copy?</h3>
-                    <a href="https://initial-learning-page.s3.ap-south-1.amazonaws.com/Siddharth_Srivastava(v4.1).pdf" target="_blank"
-                       class="inline-block bg-blue-600 text-white font-bold py-3 px-8 rounded-full shadow-lg hover:bg-blue-700 transition duration-300 transform hover:scale-105 focus:outline-none focus:ring-4 focus:ring-blue-300">
-                        Download Full Resume (PDF)
-                    </a>
+                <section class="card bg-blue-50 border-2 border-blue-200 p-6 text-center no-print">
+                    <h3 class="text-xl font-semibold mb-4 text-blue-700">Need a Copy?</h3>
+                    <div class="flex flex-col gap-3">
+                        <!-- S3 Download Button -->
+                        <a href="https://initial-learning-page.s3.ap-south-1.amazonaws.com/Siddharth_Srivastava(v4.1).pdf" target="_blank"
+                           class="w-full inline-flex items-center justify-center bg-blue-600 text-white font-bold py-3 px-6 rounded-xl shadow-lg hover:bg-blue-700 transition duration-300 transform hover:scale-[1.02] focus:outline-none focus:ring-4 focus:ring-blue-300">
+                           <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-4l-4 4m0 0l-4-4m4 4V4" />
+                           </svg>
+                            Download from S3
+                        </a>
+
+                        <!-- Create PDF Button -->
+                        <button onclick="window.print()"
+                           class="w-full inline-flex items-center justify-center bg-white text-blue-600 border-2 border-blue-600 font-bold py-3 px-6 rounded-xl shadow-lg hover:bg-blue-50 transition duration-300 transform hover:scale-[1.02] focus:outline-none focus:ring-4 focus:ring-blue-300">
+                           <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 17h2a2 2 0 002-2v-4a2 2 0 00-2-2H5a2 2 0 00-2 2v4a2 2 0 002 2h2m2 4h6a2 2 0 002-2v-4a2 2 0 00-2-2H9a2 2 0 00-2 2v4a2 2 0 002 2zm8-12V5a2 2 0 00-2-2H9a2 2 0 00-2 2v4h10z" />
+                           </svg>
+                            Create PDF
+                        </button>
+                    </div>
                 </section>
             </div>
 
             <!-- Column 2 & 3: Skills, then Experience (Main Content) -->
             <div class="lg:col-span-2 space-y-8">
                 
-                <!-- MOVED SKILLS & TOOLS CARD HERE -->
+                <!-- SKILLS & TOOLS CARD HERE -->
                 <section id="skills-tools-section" class="card">
                     <h2 class="text-3xl font-bold mb-4 text-gray-800 border-b pb-2">Transferable Skills</h2>
                     <p id="skills-list" class="text-gray-700 leading-relaxed mt-4">
